--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "helmet": "^7.1.0",
         "jsonwebtoken": "^9.0.2",
         "kafkajs": "^2.2.4",
+        "knex": "^3.1.0",
         "morgan": "^1.10.0",
         "pg": "^8.11.3",
         "pg-hstore": "^2.3.4",
