feat: implement transactions

--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
         "start:auth": "npm run start -- --process=auth",
         "start:user": "npm run start -- --process=user",
         "dev:api": "nodemon --exec ts-node -r tsconfig-paths/register processes/api-gateway/index.ts",
-        "dev:auth": "nodemon --exec ts-node -r tsconfig-paths/register processes/auth-service/index.ts",
-        "dev:user": "nodemon --exec ts-node -r tsconfig-paths/register processes/user-service/index.ts",
+        "dev:worker": "nodemon --exec ts-node -r tsconfig-paths/register processes/worker/index.ts",
         "test": "jest --config jest.config.json",
         "test:watch": "jest --watch",
         "test:coverage": "jest --coverage",
