--- a/package.json
+++ b/package.json
@@ -62,8 +62,10 @@
         "pg": "^8.11.3",
         "pg-hstore": "^2.3.4",
         "prom-client": "^15.0.0",
+        "qrcode": "^1.5.4",
         "redis": "^4.6.10",
         "reflect-metadata": "^0.1.13",
+        "speakeasy": "^2.0.0",
         "swagger-ui-express": "^5.0.0",
         "uuid": "^9.0.1",
         "winston": "^3.11.0",
@@ -80,6 +82,8 @@
         "@types/morgan": "^1.9.9",
         "@types/node": "^20.10.4",
         "@types/pg": "^8.10.9",
+        "@types/qrcode": "^1.5.6",
+        "@types/speakeasy": "^2.0.10",
         "@types/swagger-ui-express": "^4.1.6",
         "@types/uuid": "^9.0.7",
         "@typescript-eslint/eslint-plugin": "^6.13.2",
