--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
         "@types/pg": "^8.10.9",
         "@types/qrcode": "^1.5.6",
         "@types/speakeasy": "^2.0.10",
+        "@types/supertest": "^6.0.3",
         "@types/swagger-ui-express": "^4.1.6",
         "@types/uuid": "^9.0.7",
         "@typescript-eslint/eslint-plugin": "^6.13.2",
@@ -94,6 +95,7 @@
         "jest": "^29.7.0",
         "nodemon": "^3.0.2",
         "prettier": "^3.1.0",
+        "supertest": "^7.2.2",
         "ts-jest": "^29.1.1",
         "ts-node": "^10.9.1",
         "tsconfig-paths": "^4.2.0",
